[fix] fix google log api http method
