# internal/router/user.go
@@ -11,7 +11,7 @@ func RegisterUser(r *gin.RouterGroup) {
 	r.POST("/login", authAction.LoginAction)
 	r.GET("/login/google", authAction.LoginWithGoogleAction)
 	r.GET("/login/google/redirect", authAction.LoginWithGoogleAuthkAction)
-	r.GET("/login/google/access-token", authAction.LoginWithGoogleAccessTokenAction)
+	r.POST("/login/google/access-token", authAction.LoginWithGoogleAccessTokenAction)
 
 	userGroup := r.Group("/user").Use(auth.ValidateToken)
 
